2005-06-10 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc, src/stimuli.h, src/symbol.cc, src/symbol.h:
	Stimuli symbols were not getting added to the symbol table when
	their name was being changed.

2005-06-10 J.R. Heisey <jrheisey@sourceforge.com>
	*src/gpsim_object.cc,h: Small change to allow name() call
	in a const variable context.

	*plat/win32/gpsim.def, src/processor.cc, src/stimuli.cc,
	src/symbol.cc, src/symbol.h, gui/gui_profile.cc: Changed
	the implementation of the Symbol_Table class to order
	by symbol name so that a binary search will improve lookup
	speed.

2005-06-10 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_stimulus.cc, doc/gpsim.lyx: Updated documentation.

2005-06-09 J.R. Heisey <jrheisey@sourceforge.com>
	*cli/cmd_module.cc: Added extra help for module command.

	*gui/gui_src.h, gui/gui_src_asm.cc, plat/win32/gpsim.def,
	src/processor.cc,h: Changed the parsing of the source for
	formatted display to speed things up during file loading.
	Source is now cached in a form for rendering to the formatted
	text window.

2005-06-09 Scott Dattalo <scott@dattalo.com>
	* gui/gui_main.cc, gui/gui_regwin.cc, gui/gui_src.cc,
	gui/gui_src_asm.cc, gui/gui_src_opcode.cc, configure.ac:
	Found the source of a bug that causes gpsim to hang when gtk-2.6.7
	and gtkextra-2.0 are used. The problem is either with gtkextra or
	the interaction of it with gtk. gpsim currently has in place a
	stop-gap measure to prevent the problem from keeping the simulator
	from being unusable.

2005-06-06 J.R. Heisey <jrheisey@sourceforge.com>
	*src/os_dependent.cc: The environment variable GPSIMPATH may be
	used to specify folders where shared libraries may be found. This
	is primarily for windows developers of gpsim.
	- Small change to prevent load_library() from displaying an error
	message that is not needed.

	*cli/cmd_node.cc: Use a reference instead of allocating a string
	on the local stack.

	*modules/modules.vcproj: Changed Visual Studio build of modules