@@ -159,7 +159,7 @@ AC_CHECK_FUNCS([floor gethostbyname gethostname gettimeofday memset pow select s
 
 # printf modifier define for long long as "ll"
 # config_win32.h.in defines this for Visual Studio stdclib as "I64"
-AC_DEFINE([PRINTF_INT64_MODIFIER],["ll--"],[printf modifier define for long long])
+AC_DEFINE([PRINTF_INT64_MODIFIER],["ll"],[printf modifier define for long long])
 
 
 AM_CFLAGS=
