@@ -422,7 +422,7 @@ public:
   virtual void set_out_of_range_pm(unsigned int address, unsigned int value);
   guint64 cycles_used(unsigned int address);
   virtual bool         IsAddressInRange(unsigned int address) {
-    return program_memory_size()<=address  || address<0;
+    return address < program_memory_size();
   }
 
   //
